--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
   <body>
     <!-- <div class="center-line"></div> -->
 
-    <img
-      class="landing-bg"
-      src="/images/Decore.png"
-      alt="Landing background image"
-    />
+    <img class="landing-bg" src="/images/Decore.png" alt="Landing background image" />
 
     <header class="flex space-between align-center font-header">
       <a class="header-logo flex align-center" href="">
@@ -36,35 +32,33 @@
       </section>
     </header>
 
-    <main class="flex align-center">
-      <section class="landing-info flex-1">
-        <h2>Best destinations around the world</h2>
-        <h1 class="landing-h1">
-          Travel, enjoy and live a new and full life
-          <img
-            class="red-line"
-            src="/images/Decore_Underline.png"
-            alt="Red underline"
-          />
-        </h1>
-        <p class="landing-text">
-          Discover the world's most captivating destinations with our exclusive
-          travel packages. From breathtaking landscapes to vibrant cityscapes,
-          we curate unforgettable experiences tailored just for you.
-        </p>
-        <div class="landing-bts flex">
-          <button class="btn find-out-more">Find out more</button>
-          <div class="play-demo flex align-center">
-            <button class="btn flex align-center justify-center">
-              &#9654;
-            </button>
-            <p class="play-demo-text">Play Demo</p>
+    <main>
+      <section class="flex align-center">
+        <div class="landing flex-1">
+          <h2>Best destinations around the world</h2>
+          <h1 class="landing-h1">
+            Travel, enjoy and live a new and full life
+            <img class="red-line" src="/images/Decore_Underline.png" alt="Red underline" />
+          </h1>
+          <p class="landing-text">
+            Discover the world's most captivating destinations with our exclusive travel packages. From breathtaking
+            landscapes to vibrant cityscapes, we curate unforgettable experiences tailored just for you.
+          </p>
+          <div class="landing-bts flex">
+            <button class="btn find-out-more">Find out more</button>
+            <div class="play-demo flex align-center">
+              <button class="btn flex align-center justify-center">&#9654;</button>
+              <p class="play-demo-text">Play Demo</p>
+            </div>
           </div>
         </div>
+        <div class="landing-img flex-1">
+          <img class="traveller" src="/images/Traveller 1.png" alt="Traveler smiling" />
+          <img class="plane-1" src="/images/plane.png" alt="Plane illustation" />
+          <img class="plane-2" src="/images/plane.png" alt="Plane illustration" />
+        </div>
       </section>
-      <section class="landing-img flex-1">
-        <img src="/images/Traveller 1.png" alt="Traveler smiling" />
-      </section>
+      <section class="services">Services</section>
     </main>
   </body>
 </html>
