Progress on Services section

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
     <main>
       <section class="flex align-center">
-        <div class="landing flex-1">
-          <h2>Best destinations around the world</h2>
+        <div class="landing-info flex-1">
+          <h3>Best destinations around the world</h3>
           <h1 class="landing-h1">
             Travel, enjoy and live a new and full life
             <img class="red-line" src="/images/Decore_Underline.png" alt="Red underline" />
@@ -58,7 +58,32 @@
           <img class="plane-2" src="/images/plane.png" alt="Plane illustration" />
         </div>
       </section>
-      <section class="services">Services</section>
+      <section class="services flex flex-column align-center">
+        <h4>Category</h4>
+        <h2>We Offer Best Services</h2>
+        <div class="services-list flex align-center">
+          <div class="service-item flex flex-column align-center">
+            <img class="service-img" src="/images/CalculatedWeather.svg" alt="Satellite" />
+            <p class="service-title">Calculated Weather</p>
+            <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+          </div>
+          <div class="service-item flex flex-column align-center">
+            <img class="service-img" src="/images/BestFlights.svg" alt="Satellite" />
+            <p class="service-title">Best Flights</p>
+            <p>Engrossed listening. Park gate sell they west hard for the.</p>
+          </div>
+          <div class="service-item flex flex-column align-center">
+            <img class="service-img" src="/images/LocalEvents.svg" alt="Satellite" />
+            <p class="service-title">Local Events</p>
+            <p>Barton vanity itself do in it. Preferd to men it engrossed listening.</p>
+          </div>
+          <div class="service-item flex flex-column align-center">
+            <img class="service-img" src="/images/Customization.svg" alt="Satellite" />
+            <p class="service-title">Customization</p>
+            <p>We deliver outsourced aviation services for military customers</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
