Services section finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   <body>
     <!-- <div class="center-line"></div> -->
 
-    <img class="landing-bg" src="/images/Decore.png" alt="Landing background image" />
+    <img
+      class="landing-bg"
+      src="/images/Decore.png"
+      alt="Landing background image"
+    />
 
     <header class="flex space-between align-center font-header">
       <a class="header-logo flex align-center" href="">
@@ -38,24 +42,44 @@
           <h3>Best destinations around the world</h3>
           <h1 class="landing-h1">
             Travel, enjoy and live a new and full life
-            <img class="red-line" src="/images/Decore_Underline.png" alt="Red underline" />
+            <img
+              class="red-line"
+              src="/images/Decore_Underline.png"
+              alt="Red underline"
+            />
           </h1>
           <p class="landing-text">
-            Discover the world's most captivating destinations with our exclusive travel packages. From breathtaking
-            landscapes to vibrant cityscapes, we curate unforgettable experiences tailored just for you.
+            Discover the world's most captivating destinations with our
+            exclusive travel packages. From breathtaking landscapes to vibrant
+            cityscapes, we curate unforgettable experiences tailored just for
+            you.
           </p>
           <div class="landing-bts flex">
             <button class="btn find-out-more">Find out more</button>
             <div class="play-demo flex align-center">
-              <button class="btn flex align-center justify-center">&#9654;</button>
+              <button class="btn flex align-center justify-center">
+                &#9654;
+              </button>
               <p class="play-demo-text">Play Demo</p>
             </div>
           </div>
         </div>
         <div class="landing-img flex-1">
-          <img class="traveller" src="/images/Traveller 1.png" alt="Traveler smiling" />
-          <img class="plane-1" src="/images/plane.png" alt="Plane illustation" />
-          <img class="plane-2" src="/images/plane.png" alt="Plane illustration" />
+          <img
+            class="traveller"
+            src="/images/Traveller 1.png"
+            alt="Traveler smiling"
+          />
+          <img
+            class="plane-1"
+            src="/images/plane.png"
+            alt="Plane illustation"
+          />
+          <img
+            class="plane-2"
+            src="/images/plane.png"
+            alt="Plane illustration"
+          />
         </div>
       </section>
       <section class="services flex flex-column align-center">
@@ -63,24 +87,49 @@
         <h2>We Offer Best Services</h2>
         <div class="services-list flex align-center">
           <div class="service-item flex flex-column align-center">
-            <img class="service-img" src="/images/CalculatedWeather.svg" alt="Satellite" />
+            <img
+              class="service-img"
+              src="/images/CalculatedWeather.svg"
+              alt="Satellite"
+            />
             <p class="service-title">Calculated Weather</p>
-            <p>Built Wicket longer admire do barton vanity itself do in it.</p>
+            <p class="service-desc">
+              Built Wicket longer admire do barton vanity itself do in it.
+            </p>
           </div>
           <div class="service-item flex flex-column align-center">
-            <img class="service-img" src="/images/BestFlights.svg" alt="Satellite" />
+            <img
+              class="service-img"
+              src="/images/BestFlights.svg"
+              alt="Satellite"
+            />
             <p class="service-title">Best Flights</p>
-            <p>Engrossed listening. Park gate sell they west hard for the.</p>
+            <p class="service-desc">
+              Engrossed listening. Park gate sell they west hard for the.
+            </p>
           </div>
           <div class="service-item flex flex-column align-center">
-            <img class="service-img" src="/images/LocalEvents.svg" alt="Satellite" />
+            <img
+              class="service-img"
+              src="/images/LocalEvents.svg"
+              alt="Satellite"
+            />
             <p class="service-title">Local Events</p>
-            <p>Barton vanity itself do in it. Preferd to men it engrossed listening.</p>
+            <p class="service-desc">
+              Barton vanity itself do in it. Preferd to men it engrossed
+              listening.
+            </p>
           </div>
           <div class="service-item flex flex-column align-center">
-            <img class="service-img" src="/images/Customization.svg" alt="Satellite" />
+            <img
+              class="service-img"
+              src="/images/Customization.svg"
+              alt="Satellite"
+            />
             <p class="service-title">Customization</p>
-            <p>We deliver outsourced aviation services for military customers</p>
+            <p class="service-desc">
+              We deliver outsourced aviation services for military customers
+            </p>
           </div>
         </div>
       </section>
